(fix) Middle align the logo, fix responsiveness
Because the page title is now longer, it was collapsing in a half on
tablet view. The width of .govuk-header__logo is now set to be 100%
on tablet for a better display.

--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -5,19 +5,24 @@ $govuk-brand-colour: #28a197;
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import "../../node_modules/govuk-frontend/all";
 
-@include govuk-media-query($from: tablet) {
+.govuk-header__logotype-eye,.govuk-header__logotype-eye-fallback-image {
+    position: relative;
+    top: 7px;
+}
+
+.govuk-header__logo {
+  vertical-align: baseline;
+}
+
+@include govuk-media-query($from: desktop) {
   .govuk-header__logo {
     width: 32%;
   }
+}
 
-  .govuk-header__logotype,.govuk-header__logotype-fallback-image {
-      position: relative;
-      top: -2px
-  }
-
-  .govuk-header__link--service-name {
-    position: relative;
-    top: 10px;
+@include govuk-media-query($until: desktop) {
+  .govuk-header__logo {
+    width: 100%;
   }
 }
 
